--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -9,7 +9,7 @@ header: header-match
     <div class="container-sm bg-transparent py-5">
       <div class="row row-cols-1">
         <div class="col">
-          <div class="card text-white bg-transparent rounded-0">
+          <div class="card text-white bg-transparent border-0">
             <div class="card-header d-flex justify-content-between">
               <h1 class="fw-bolder text-uppercase">lineup</h1>
               <div>
@@ -18,7 +18,7 @@ header: header-match
                 <img src="{% if page.away.logo %}{{ page.away.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0 rounded-circle" width="40" height="40">
               </div>
             </div>
-            <div class="pt-5 pb-3 text-white bg-transparent">
+            <div class="py-3 text-white bg-transparent">
               <div class="row row-cols-3 g-1">
                 {% for player in page.lineup %}
                 <span class="col-2 fs-5 fw-bolder text-uppercase text-end text-secondary pe-3">{{ player.no-punggung }}</span>
