--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -10,7 +10,7 @@ header: header-match
       <div class="row row-cols-1">
         <div class="col">
           <div class="card text-white bg-transparent border-0">
-            <div class="card-header d-flex justify-content-between">
+            <div class="card-header border-0 d-flex justify-content-between">
               <h1 class="fw-bolder text-uppercase">lineup</h1>
               <div>
                 <img src="{% if page.home.logo %}{{ page.home.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0 rounded-circle" width="40" height="40">
