--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -1,4 +1,4 @@
-<header class="text-white" style="height: 720px; background-image: linear-gradient(to bottom left, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.4)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+<header class="text-white" style="height: 720px; background-image: linear-gradient(to top left, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;">
   <div class="h-100">
     <div class="container pt-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
