--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -23,7 +23,7 @@ header: header-match
                 {% for player in page.lineup %}
                 <span class="col-2 fs-5 fw-bolder text-uppercase text-end text-secondary pe-3">{{ player.no-punggung }}</span>
                 <!--<span class="col-2 fs-6 text-uppercase text-center badge border border-dark text-secondary">{{ player.position }}</span>-->
-                <span class="col-10 fs-5 fw-bolder text-uppercase">{{ player.name }}{% if player.position == "gk" %}<span class="badge bg-secondary text-dark text-uppercase text-center fs-5 p-1 ms-2">{{ player.position }}</span>{% endif %}</span>
+                <span class="col-10 fs-5 fw-bolder text-uppercase">{{ player.name }}{% if player.role %}<span class="badge bg-secondary text-dark text-uppercase text-center fs-5 p-1 ms-2">{{ player.role }}</span>{% endif %}</span>
                 {% endfor %}
               </div>
             </div>
