--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -12,15 +12,15 @@ header: header-match
           <div class="card text-white bg-transparent border-0">
             <div class="card-header border-0 d-flex justify-content-between">
               <h1 class="fw-bolder text-uppercase">lineup</h1>
-              <div>
+              <div class="d-flex">
                 <div>
                   <img src="{% if page.home.logo %}{{ page.home.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0 rounded-circle" width="40" height="40">
-                  <span>{{ page.home.name }}</span>
+                  <span class="text-uppercase">{{ page.home.name }}</span>
                 </div>
                   <span class="text-uppercase fw-bolder px-2">vs</span>
                 <div>
                   <img src="{% if page.away.logo %}{{ page.away.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0 rounded-circle" width="40" height="40">
-                  <span>{{ page.away.name }}</span>
+                  <span class="text-uppercase">{{ page.away.name }}</span>
                 </div>
               </div>
             </div>
