--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -15,14 +15,14 @@ header: header-match
               <div class="d-flex justify-content-center align-items-center">
                 <div>
                   <img src="{% if page.home.logo %}{{ page.home.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0 rounded-circle" width="40" height="40">
-                  <span class="d-block text-uppercase"><small>{{ page.home.name }}</small></span>
+                  <span class="d-block text-uppercase text-center"><small>{{ page.home.name }}</small></span>
                 </div>
                 <div>
-                  <span class="text-uppercase fw-bolder px-2">vs</span>
+                  <span class="d-block text-uppercase fw-bolder">vs</span>
                 </div>
                 <div>
                   <img src="{% if page.away.logo %}{{ page.away.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0 rounded-circle" width="40" height="40">
-                  <span class="d-block text-uppercase"><small>{{ page.away.name }}</small></span>
+                  <span class="d-block text-uppercase text-center"><small>{{ page.away.name }}</small></span>
                 </div>
               </div>
             </div>
