--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -12,7 +12,7 @@ header: header-match
           <div class="card text-white bg-transparent border-0">
             <div class="card-header border-0 d-flex justify-content-between">
               <h1 class="fw-bolder text-uppercase">lineup</h1>
-              <div class="d-flex justify-content-around align-items-start">
+              <div class="d-flex justify-content-between align-items-start">
                 <div>
                   <img src="{% if page.home.logo %}{{ page.home.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0 rounded-circle" width="40" height="40">
                   <span class="d-block text-uppercase text-center"><small>{{ page.home.name }}</small></span>
