--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -13,14 +13,14 @@ header: header-match
             <div class="card-header border-0 d-flex justify-content-between">
               <h1 class="fw-bolder text-uppercase">lineup</h1>
               <div class="d-flex justify-content-end align-items-start">
-                <div>
+                <div class="d-block">
                   <img src="{% if page.home.logo %}{{ page.home.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="d-block border-0 rounded-circle" width="40" height="40">
                   <span class="d-block text-uppercase text-center"><small>{{ page.home.name }}</small></span>
                 </div>
-                <div>
+                <div class="d-block">
                   <span class="d-block text-uppercase fw-bolder">vs</span>
                 </div>
-                <div>
+                <div class="d-block">
                   <img src="{% if page.away.logo %}{{ page.away.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="d-block border-0 rounded-circle" width="40" height="40">
                   <span class="d-block text-uppercase text-center"><small>{{ page.away.name }}</small></span>
                 </div>
