--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -12,12 +12,12 @@ header: header-match
           <div class="card text-white bg-transparent border-0">
             <div class="card-header border-0 d-flex justify-content-between">
               <h1 class="fw-bolder text-uppercase">lineup</h1>
-              <div class="d-flex justify-content-end align-items-start">
+              <div class="d-flex justify-content-center align-items-start">
                 <div class="d-block">
                   <img src="{% if page.home.logo %}{{ page.home.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="d-block border-0 rounded-circle" width="40" height="40">
                   <span class="d-block text-uppercase text-center"><small>{{ page.home.name }}</small></span>
                 </div>
-                <div class="d-block">
+                <div class="d-block mx-auto">
                   <span class="d-block text-uppercase fw-bolder">vs</span>
                 </div>
                 <div class="d-block">
