--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -12,16 +12,16 @@ header: header-match
           <div class="card text-white bg-transparent border-0">
             <div class="card-header border-0 d-flex justify-content-between">
               <h1 class="fw-bolder text-uppercase">lineup</h1>
-              <div class="d-flex justify-content-center align-items-center">
-                <div class="d-inline-block">
+              <div class="d-flex justify-content-center align-items-start">
+                <div>
                   <img src="{% if page.home.logo %}{{ page.home.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0 rounded-circle" width="40" height="40">
                   <span class="text-uppercase text-center"><small>{{ page.home.name }}</small></span>
                 </div>
-                <div class="d-inline-block mx-auto">
+                <div class="mx-auto">
                   <span class="text-uppercase fw-bolder">vs</span>
                 </div>
-                <div class="d-inline-block">
-                  <img src="{% if page.away.logo %}{{ page.away.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="d-block border-0 rounded-circle" width="40" height="40">
+                <div>
+                  <img src="{% if page.away.logo %}{{ page.away.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0 rounded-circle" width="40" height="40">
                   <span class="text-uppercase text-center"><small>{{ page.away.name }}</small></span>
                 </div>
               </div>
