--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -10,8 +10,8 @@ header: header-match
       <div class="row row-cols-1">
         <div class="col">
           <div class="card text-white bg-transparent border-0">
-            <div class="card-header d-block mx-auto border-0">
-              <h1 class="fw-bolder text-uppercase">lineup</h1>
+            <div class="card-header border-0">
+              <h1 class="d-block mx-auto fw-bolder text-uppercase">lineup</h1>
               <div class="d-flex justify-content-center align-items-start">
                 <div>
                   <img src="{% if page.home.logo %}{{ page.home.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0 rounded-circle" width="40" height="40">
