--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -12,13 +12,13 @@ header: header-match
           <div class="card text-white bg-transparent border-0">
             <div class="card-header d-flex justify-content-between border-0">
               <h1 class="fw-bolder text-uppercase">lineup</h1>
-              <div class="d-flex justify-content-center align-items-start text-center">
+              <div class="d-flex justify-content-center align-items-center text-center">
                 <div>
                   <img src="{% if page.home.logo %}{{ page.home.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0 rounded-circle" width="40" height="40">
                   <span class="d-block text-uppercase text-center"><small>{{ page.home.name }}</small></span>
                 </div>
                 <div>
-                  <span class="text-uppercase fw-bolder">vs</span>
+                  <span class="d-block text-uppercase fw-bolder">vs</span>
                 </div>
                 <div>
                   <img src="{% if page.away.logo %}{{ page.away.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0 rounded-circle" width="40" height="40">
