--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -14,14 +14,14 @@ header: header-match
               <h1 class="fw-bolder text-uppercase">lineup</h1>
               <div class="d-flex justify-content-center align-items-start">
                 <div>
-                  <img src="{% if page.home.logo %}{{ page.home.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="text-end border-0 rounded-circle" width="35" height="35">
+                  <img src="{% if page.home.logo %}{{ page.home.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="d-block text-end border-0 rounded-circle" width="35" height="35">
                   <span class="d-block text-uppercase text-end fw-bolder"><small>{{ page.home.name }}</small></span>
                 </div>
                 <div>
                   <span class="d-block mx-auto text-center text-uppercase fw-bolder px-1 pt-1">vs</span>
                 </div>
                 <div>
-                  <img src="{% if page.away.logo %}{{ page.away.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="text-start border-0 rounded-circle" width="35" height="35">
+                  <img src="{% if page.away.logo %}{{ page.away.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="d-block text-start border-0 rounded-circle" width="35" height="35">
                   <span class="d-block text-uppercase text-start fw-bolder"><small>{{ page.away.name }}</small></span>
                 </div>
               </div>
