--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -15,14 +15,14 @@ header: header-match
               <div class="d-flex justify-content-center align-items-start">
                 <div class="d-block text-end">
                   <img src="{% if page.home.logo %}{{ page.home.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0 rounded-circle" width="35" height="35">
-                  <span class="d-block text-capitalize fw-bolder pt-1"><small>{{ page.home.name }}</small></span>
+                  <span class="d-block text-uppercase fw-bolder pt-1"><small>{{ page.home.name }}</small></span>
                 </div>
                 <div>
                   <span class="d-block mx-auto text-center text-uppercase fw-bolder px-3 pt-1"><small>vs</small></span>
                 </div>
                 <div class="d-block text-start">
                   <img src="{% if page.away.logo %}{{ page.away.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0 rounded-circle" width="35" height="35">
-                  <span class="d-block text-capitalize fw-bolder pt-1"><small>{{ page.away.name }}</small></span>
+                  <span class="d-block text-uppercase fw-bolder pt-1"><small>{{ page.away.name }}</small></span>
                 </div>
               </div>
             </div>
