--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -26,12 +26,12 @@ header: header-match
                 </div>
               </div>
             </div>
-            <div class="py-3 text-white bg-transparent">
-              <div class="row row-cols-2 g-1">
+            <div class="pt-5 pb-3 text-white bg-transparent">
+              <div class="row row-cols-2 g-0">
                 {% for player in page.lineup %}
                 <span class="col-2 fs-5 fw-bolder text-uppercase text-end text-secondary pe-3">{{ player.no-punggung }}</span>
                 <!--<span class="col-2 fs-6 text-uppercase text-center badge border border-dark text-secondary">{{ player.position }}</span>-->
-                <span class="col-10 fs-5 fw-bolder text-uppercase">{{ player.name }}{% if player.role %}<span class="badge bg-secondary text-dark text-uppercase text-center fs-5 p-1 ms-2">{{ player.role }}</span>{% endif %}</span>
+                <span class="col-10 fs-5 fw-bolder text-uppercase">{{ player.name }}{% if player.role %}<span class="badge rounded-pill bg-secondary text-dark text-uppercase text-center fs-5 p-1 ms-2">{{ player.role }}</span>{% endif %}</span>
                 {% endfor %}
               </div>
             </div>
