--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -15,14 +15,14 @@ header: header-match
               <div class="d-flex justify-content-center align-items-start">
                 <div class="d-block text-end">
                   <img src="{% if page.home.logo %}{{ page.home.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0 rounded-circle" width="35" height="35">
-                  <span class="d-block text-uppercase fw-bolder pt-1"><small>{{ page.home.name }}</small></span>
+                  <span class="d-block text-uppercase fw-bolder"><small>{{ page.home.name }}</small></span>
                 </div>
                 <div>
                   <span class="d-block mx-auto text-center text-uppercase fw-bolder px-2 pt-1"><small>vs</small></span>
                 </div>
                 <div class="d-block text-start">
                   <img src="{% if page.away.logo %}{{ page.away.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0 rounded-circle" width="35" height="35">
-                  <span class="d-block text-uppercase fw-bolder pt-1"><small>{{ page.away.name }}</small></span>
+                  <span class="d-block text-uppercase fw-bolder"><small>{{ page.away.name }}</small></span>
                 </div>
               </div>
             </div>
@@ -30,8 +30,8 @@ header: header-match
               <div class="row row-cols-2 g-0">
                 {% for player in page.lineup %}
                 <span class="col-2 fs-5 fw-bolder text-uppercase text-end text-secondary pe-3">{{ player.no-punggung }}</span>
-                <!--<span class="col-2 fs-6 text-uppercase text-center badge border border-dark text-secondary">{{ player.position }}</span>-->
-                <span class="col-10 fs-5 fw-bolder text-uppercase">{{ player.name }}{% if player.role %}<span class="badge rounded-pill bg-secondary text-dark text-uppercase text-center fs-5 ms-2"><small>{{ player.role }}</small></span>{% endif %}</span>
+                <span class="col-2 fs-6 text-uppercase text-center badge border border-dark text-secondary">{{ player.position }}</span>
+                <span class="col-10 fs-5 fw-bolder text-uppercase">{{ player.name }}{% if player.role %}<span class="badge rounded-pill bg-secondary text-dark text-uppercase text-center fs-5 ms-2 p-0"><small>{{ player.role }}</small></span>{% endif %}</span>
                 {% endfor %}
               </div>
             </div>
