--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -27,11 +27,11 @@ header: header-match
               </div>
             </div>
             <div class="pt-5 pb-3 text-white bg-transparent">
-              <div class="row row-cols-3 g-0">
+              <div class="row row-cols-3 g-1">
                 {% for player in page.lineup %}
-                <span class="col-2 fs-5 fw-bolder text-uppercase text-end text-secondary pe-3">{{ player.no-punggung }}</span>
+                <span class="col-2 fs-5 fw-bolder text-uppercase text-end text-secondary pe-2">{{ player.no-punggung }}</span>
                 <span class="col-2 fs-6 text-uppercase text-center badge border border-dark text-secondary">{{ player.position }}</span>
-                <span class="col-8 fs-5 fw-bolder text-uppercase">{{ player.name }}{% if player.role %}<span class="badge rounded-pill bg-secondary text-dark text-uppercase text-center fs-5 ms-2 p-1"><small>{{ player.role }}</small></span>{% endif %}</span>
+                <span class="col-8 fs-5 fw-bolder text-uppercase ps-2">{{ player.name }}{% if player.role %}<span class="badge rounded-pill bg-secondary text-dark text-uppercase text-center fs-5 ms-2 p-1"><small>{{ player.role }}</small></span>{% endif %}</span>
                 {% endfor %}
               </div>
             </div>
