--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -18,7 +18,7 @@ header: header-match
                   <span class="d-block text-uppercase fw-bolder"><small>{{ page.home.name }}</small></span>
                 </div>
                 <div>
-                  <span class="d-block mx-auto text-center text-uppercase fw-bolder px-2 pt-1"><small>vs</small></span>
+                  <span class="d-block mx-auto text-center text-uppercase text-secondary fw-bolder px-2 pt-1"><small>vs</small></span>
                 </div>
                 <div class="d-block text-start">
                   <img src="{% if page.away.logo %}{{ page.away.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0 rounded-circle" width="35" height="35">
@@ -29,9 +29,9 @@ header: header-match
             <div class="pt-5 pb-3 text-white bg-transparent">
               <div class="row row-cols-3 g-1">
                 {% for player in page.lineup %}
-                <span class="col-2 fs-5 fw-bolder text-uppercase text-end pe-3">{{ player.no-punggung }}</span>
+                <span class="col-2 fs-5 fw-bolder text-uppercase text-end text-secondary pe-2">{{ player.no-punggung }}</span>
                 <span class="col-2 fs-6 text-uppercase text-center badge border border-dark text-secondary">{{ player.position }}</span>
-                <span class="col-8 fs-5 fw-bolder text-uppercase ps-3">{{ player.name }}{% if player.role %}<span class="badge rounded-pill bg-secondary text-dark text-uppercase text-center fs-5 ms-2 px-1 py-0"><small>{{ player.role }}</small></span>{% endif %}</span>
+                <span class="col-8 fs-5 fw-bolder text-uppercase ps-2">{{ player.name }}{% if player.role %}<span class="badge rounded-pill bg-secondary text-dark text-uppercase text-center fs-5 ms-2 px-1 py-0"><small>{{ player.role }}</small></span>{% endif %}</span>
                 {% endfor %}
               </div>
             </div>
