--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ 'assets/stylesheet.css' | relative_url }}">
     <script src="{{ 'assets/function.js' | relative_url }}"></script>
+    <script src="https://kit.fontawesome.com/3b2bfdf57e.js" crossorigin="anonymous"></script>
   </head>
   <body> 
     {% if page.header %}
